K8s/Frontend-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: cicdmicrosvc1-d4g7c6aehxc5amfa.azurecr.io/frontend:tag
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
